RESOLVED FIXED279193
RTCRtpEncodingParameters has wrong default values
https://bugs.webkit.org/show_bug.cgi?id=279193
Summary RTCRtpEncodingParameters has wrong default values
youenn fablet
Reported 2024-09-05 07:57:34 PDT
RTCRtpEncodingParameters has wrong default values
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-05 07:58:39 PDT
youenn fablet
Comment 2 2024-09-05 08:49:12 PDT
youenn fablet
Comment 3 2024-09-06 01:17:21 PDT
*** Bug 279202 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2024-09-17 00:07:21 PDT
Committed 283750@main (cbd18cef4633): <https://commits.webkit.org/283750@main> Reviewed commits have been landed. Closing PR #33189 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.